src/objects/Scenario_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Account</label>
        <referenceTo>Scenario_Savings__c</referenceTo>
        <relationshipLabel>Scenario Goals</relationshipLabel>
        <relationshipName>Scenario_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scenario Goals</relationshipLabel>
        <relationshipName>Scenario_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenario_Current_Amount__c</fullName>
        <label>Scenario Current Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_Goal_Priority__c</fullName>
        <label>Scenario Goal Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 1 (must have)</fullName>
                </value>
                <value>
                    <fullName>Priority 2</fullName>
                </value>
                <value>
                    <fullName>Priority 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scenario_Goal_Type__c</fullName>
        <label>Scenario Goal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Home Improvement</fullName>
                </value>
                <value>
                    <fullName>Home Purchase</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Wedding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scenario_Monthly_Contribution__c</fullName>
        <label>Scenario Monthly Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Scenario Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scenario_Target_Amount__c</fullName>
        <label>Scenario Target Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_Target_Date__c</fullName>
        <label>Scenario Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Scenario Goals</relationshipLabel>
        <relationshipName>Scenario_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Benefit__c</fullName>
        <label>Tax Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scenario Goal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scenario Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>